# vidify

./: .dockerignore  .flake8  .gitignore  .travis.yml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFEST.in  README-nl_NL.md  README.adoc  README.md  build.py  config.ini  example.ini  format.sh  main.py  pyproject.toml  script.sh  setup.py  snapcraft.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot.yml  release.yaml
core/: config.rs  data.rs  error.rs  lib.rs
core/api/: macos.rs  mod.rs  mpris.rs  spotifyweb.rs  spotifyweb_response.html  windows.rs
core/lyrics/: lyricwikia.rs  mod.rs
core/player/: external.rs  mod.rs  mpv.rs
dev/: .gitignore  AppxManifest.xml  AppxMapping.ini  BUILDING.md  build_linux.sh  build_requires.txt  build_windows.bat  build_windows.ps1  install.py  linux.spec  linux_onefile.spec  linux_requires.txt  run-python-tests.sh  run-tests-docker.sh  snapcraft.yaml  test-qt-bindings.sh  vidify.desktop  windows.spec  windows_onefile.spec
images/: screenshot_with_logo.xcf
libs/: spotify.py  vlc.py  youtube.py  yt.py
res/apis/: spotifyweb_response.html
spotify-videoclips/: player.py
spotify_videoclips/: __init__.py  player.py  spotify_videoclips.py
spotify_videos/: __main__.py  argparser.py  config.py  dbus_api.py  dbus_player.py  player.py  spotify_videos.py  utils.py  vlc.py  vlc_player.py  web_api.py  web_player.py
spotify_videos/api/: darwin.py  linux.py  swspotify.py  web.py  windows.py
spotify_videos/player/: mpv.py  vlc.py
spotify_videos/spotipy/: __init__.py  oauth2.py  util.py
spotivids/: __init__.py  __main__.py  config.py  gui.py  lyrics.py  utils.py  youtube.py
spotivids/api/: __init__.py  dbus_mediaplayer.py  generic.py  linux.py  mpris.py  swspotify.py  web.py
spotivids/api/spotify/: linux.py  swspotify.py  web.py
spotivids/gui/: __init__.py  components.py  drawer.py  drawer.qml  window.py
spotivids/gui/api/: spotify_web.py
spotivids/player/: __init__.py  generic.py  mpv.py  vlc.py
src/: player.py  spotify_videoclips.py
src/audiosync/: Cargo.toml  README.md
src/audiosync/examples/: simple.rs
src/audiosync/src/: error.rs  lib.rs
src/core/: Cargo.toml  config.rs  data.rs  error.rs  lib.rs  res.rs
src/core/api/: mod.rs  mpris.rs
src/core/lyrics/: mod.rs
src/core/player/: external.rs  mod.rs
src/core/src/: error.rs  lib.rs  res.rs
src/vidify/: __init__.py  __main__.py  audiosync.py  lyrics.py  youtube.py
src/vidify/api/: __init__.py  mpris.py
src/vidify/api/spotify/: swspotify.py  web.py
src/vidify/gui/: __init__.py  components.py  window.py
src/vidify/gui/api/: spotify_web.py
src/vidify/player/: __init__.py  external.py  mpv.py
tests/: test_api_and_player_data.py  test_apis.py  test_config.py  test_connection.py  test_consistency.py  test_dbus.py  test_utils.py  test_youtube.py
tests/api/: test_mpris.py  test_spotify_web.py  test_swspotify.py
tests/apis/: test_mpris.py  test_spotify_linux.py  test_spotify_web.py  test_swspotify.py
tests/player/: test_external.py
vidify/: __init__.py  __main__.py  audiosync.py  config.py  lyrics.py  server.py  youtube.py
vidify/api/: __init__.py  generic.py  mpris.py
vidify/api/spotify/: swspotify.py  web.py
vidify/gui/: __init__.py  components.py  window.py
vidify/gui/api/: spotify_web.py
vidify/player/: __init__.py  external.py  generic.py  mpv.py  vlc.py  web.py
vidify/player/static/css/: style.css
vidify/player/templates/: index.html
vidify/player/web/: __init__.py
vidify/player/web/templates/: index.html
