[package]
name = "vidify_core"
version = "3.0.0-alpha"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
license = "GPL-3.0+"
edition = "2018"

[lib]
name = "vidify_core"
path = "src/core/lib.rs"
# For Python interoperability
crate-type = ["cdylib"]

[dependencies]
# Base dependencies
audiosync = { path = "src/audiosync", version = "0.4.0" }
clap = "2.33.1"
dirs = "3.0.0"
log = "0.4.11"
rust-ini = "0.15.3"
simplelog = "0.8.0"
structconf = "0.3.2"
strum = "0.19.1"
strum_macros = "0.19.1"
# Players
libmpv = "2.0.0"
# APIs
rspotify = { version = "0.10.0", features = ["blocking"] }
webbrowser = "0.5.4"
[target.'cfg(target_os = "linux")'.dependencies]
mpris = "1.1.2"
# Python interoperability. See workaround at `features` section.
pyo3 = "0.12"

[features]
# FIXME: Workaround until https://github.com/PyO3/pyo3/issues/341 is fixed.
# This way, `cargo test --no-default-features` can be used to run tests
# instead.
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
