[package]
name = "audiosync"
version = "0.4.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
license = "GPL-3.0+"
edition = "2018"

[lib]
name = "audiosync"
path = "src/lib.rs"
# For Python interoperability
crate-type = ["cdylib"]

[dependencies]
# Base dependencies
cpal = "0.12.1"
log = "0.4.11"
thiserror = "1.0.20"

[dev-dependencies]
simple_logger = "1.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.16.1"
