[package]
name = "audiosync"
version = "0.4.0"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
license = "GPL-3.0+"
edition = "2018"

[lib]
name = "audiosync"
path = "src/lib.rs"
# For Python interoperability
crate-type = ["cdylib"]

[dependencies]
# Base dependencies
cpal = "0.13"
log = "0.4"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.23"

# Python interoperability. See workaround at `features` section.
pyo3 = "0.13"

[dev-dependencies]
env_logger = "0.8"

[features]
# FIXME: Workaround until https://github.com/PyO3/pyo3/issues/341 is fixed.
# This way, `cargo test --no-default-features` can be used to run tests
# instead.
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
